--- a/settings.ini
+++ b/settings.ini
@@ -6,12 +6,12 @@ lib_name = world_nbdev
 # repo_name = analytics
 # company_name = nike
 
-user = Hustens0hn
-# description = A description of your project
+user = {user}
+description = A description of your project
 # keywords = some keywords
 author = {author}
 author_email = {author_email}
-# copyright = Put your copyright information here
+copyright = Put your copyright information here
 branch = {branch}
 version = 0.0.1
 min_python = 3.6
