--- a/settings.ini
+++ b/settings.ini
@@ -8,7 +8,7 @@ lib_name = world_nbdev
 
 user = {user}
 description = A description of your project
-# keywords = some keywords
+keywords = some keywords
 author = {author}
 author_email = {author_email}
 copyright = Put your copyright information here
