--- a/settings.ini
+++ b/settings.ini
@@ -7,7 +7,7 @@ lib_name = world_nbdev
 # repo_name = analytics
 # company_name = nike
 
-user = {user}
+user = Hustens0hn
 description = A description of your project
 keywords = some keywords
 author = {author}
